--- a/index.htm
+++ b/index.htm
@@ -113,28 +113,28 @@ title="Complaint/Grievance Procedures">Complaint Grievance Procedures</a> if
 	<h5 id="PageContent_SideContent_T488C0E8B006_Col00"></h5>
 <h6>Boulder County Campus </h6>
 <p>Peggy Copeland<br />
-(303) 678-3643 | <a href="mailto:peggy.copeland@frontrange.edu" title="Email Peggy Copeland">Email</a></p>
+(303) 678-3643 | <a href="mailto:peggy.copeland@frontrange.edu" title="Email Peggy Copeland">Email Peggy Copeland</a></p>
 <p>Catherine "Cath" Stager<br />
-Assistive Technology Specialist |&nbsp;<a href="mailto:Catherine.Stager@frontrange.edu" title="Email Catherine &quot;Cath&quot; Stager">Email</a></p>
+Assistive Technology Specialist |&nbsp;<a href="mailto:Catherine.Stager@frontrange.edu" title="Email Catherine &quot;Cath&quot; Stager">Email Cath Stager</a></p>
 <p>Boulder County Campus Forms</p>
 <h6>Larimer Campus</h6>
 <p>Megan Wolff<br />
-(970) 204-8657 | <a href="mailto:Megan.Wolff@frontrange.edu" title="Email Megan Wolff"> Email</a></p>
+(970) 204-8657 | <a href="mailto:Megan.Wolff@frontrange.edu" title="Email Megan Wolff"> Email Megan Wolff</a></p>
 <p>Emily Perry<br />
-(970) 204-8609 | <a href="mailto:Emily.Perry@frontrange.edu" title="Email Emily Perry">Email</a></p>
+(970) 204-8609 | <a href="mailto:Emily.Perry@frontrange.edu" title="Email Emily Perry">Email Emily Perry</a></p>
 <p>Sara Freeman<br />
-(970) 204-8606 | <a href="mailto:sara.freeman@frontrange.edu" title="Email Sara Freeman">Email</a></p>
+(970) 204-8606 | <a href="mailto:sara.freeman@frontrange.edu" title="Email Sara Freeman">Email Sara Freeman</a></p>
 	<p>Larimer County Campus Forms</p>
 <h6>Westminster Campus </h6>
 <p>Raymond Carleton<br />
-(303) 404-5302 | <a href="mailto:Raymond.Carleton@frontrange.edu" title="Email Raymond Carleton">Email</a></p>
+(303) 404-5302 | <a href="mailto:Raymond.Carleton@frontrange.edu" title="Email Raymond Carleton">Email Raymond Carleton</a></p>
 <p>Pamela Starks<br />
-(303) 404-5333 | <a href="mailto:Pamela.Starks@frontrange.edu" title="Email Pamela Starks">Email</a></p>
+(303) 404-5333 | <a href="mailto:Pamela.Starks@frontrange.edu" title="Email Pamela Starks">Email Pamela Starks</a></p>
 <p>Westminster Campus Forms</p>
    <p>Interpreting Services <br />
-(303) 404-5229 |&nbsp;<a href="mailto:Dori.LaJeunesse@frontrange.edu" title="Email Westminster Campus Interpreting Services">Email us</a></p>
+(303) 404-5229 |&nbsp;<a href="mailto:Dori.LaJeunesse@frontrange.edu" title="Email Westminster Campus Interpreting Services">Email Dori LaJeunesse</a></p>
 <h6>Brighton Center</h6>
-<p>(303) 404-5333 | <a href="mailto:Pamela.Starks@frontrange.edu" title="Email Brighton Center">Email us</a></p>
+<p>(303) 404-5333 | <a href="mailto:Pamela.Starks@frontrange.edu" title="Email Brighton Center">Email Brighton</a></p>
 	<p>http://anvk.github.io/a11yAccordion/example.html</p>
 </body>
 </html>
